add more information to swagger
