# src/controllers/department.controller.js
@@ -5,6 +5,18 @@ const personnelController = require("./personnel.controller");
 
 module.exports = {
   list: async (req, res) => {
+    /*
+            #swagger.tags = ["Departments"]
+            #swagger.summary = "List Departments"
+            #swagger.description = `
+                You can send query with endpoint for search[], sort[], page and limit.
+                <ul> Examples:
+                    <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>
+                    <li>URL/?<b>sort[field1]=1&sort[field2]=-1</b></li>
+                    <li>URL/?<b>page=2&limit=1</b></li>
+                </ul>
+            `
+        */
     const data = await res.getModelList(Department);
     res.status(200).send({
       error: false,
@@ -14,6 +26,17 @@ module.exports = {
   },
 
   create: async (req, res) => {
+    /*
+            #swagger.tags = ["Departments"]
+            #swagger.summary = "Create Department"
+            #swagger.parameters["body"] = {
+              in: "body",
+              required: true,
+              schema: {
+                name: "Test Department",
+              }
+            }
+        */
     const data = await Department.create(req.body);
     res.status(201).send({
       error: false,
@@ -21,6 +44,10 @@ module.exports = {
     });
   },
   read: async (req, res) => {
+    /*
+            #swagger.tags = ["Departments"]
+            #swagger.summary = "Get Single Department"
+        */
     const data = await Department.findOne({ _id: req.params.id });
     res.status(200).send({
       error: false,
@@ -28,6 +55,17 @@ module.exports = {
     });
   },
   update: async (req, res) => {
+    /*
+            #swagger.tags = ["Departments"]
+            #swagger.summary = "Update Department"
+            #swagger.parameters["body"] = {
+              in: "body",
+              required: true,
+              schema: {
+                name: "Test Department",
+              }
+            }
+        */
     const data = await Department.updateOne({ _id: req.params.id }, req.body);
     res.status(202).send({
       error: false,
@@ -36,6 +74,11 @@ module.exports = {
     });
   },
   delete: async (req, res) => {
+    /*
+            #swagger.tags = ["Departments"]
+            #swagger.summary = "Delete Department"
+
+        */
     const data = await Department.deleteOne({ _id: req.params.id });
     const isDeleted = data.deletedCount >= 1 ? true : false;
     res.status(isDeleted ? 204 : 404).send({
@@ -45,6 +88,11 @@ module.exports = {
   },
 
   personnels: async (req, res) => {
+    /*
+            #swagger.tags = ["Departments"]
+            #swagger.summary = "Get Department Personnels"
+
+        */
     const Personnel = require("../models/personnel.model");
 
     const data = await res.getModelList(
